--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -88,3 +88,18 @@ input[type=number] {
 #itemCount p {
   font-size: 0.8em;
 }
+
+/* item lits */
+
+#productList .product {
+  width: 22vw;
+  float: left;
+  margin: 0 0 20px 20px;
+  background-color: rgb(236, 236, 236);
+}
+#productList img {
+  width: 22vw;
+}
+#productList .product p, #productList .product h3 {
+  text-align: center;
+}
