--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -47,6 +47,13 @@ h1 {
   background-color: #111;
 }
 
+.breadcrumbs a {
+  color:rgb(97, 124, 180);
+  margin: 10px 0 10px 0;
+  display: block; 
+
+}
+
 /* Item Count */
 
 /* Chrome, Safari, Edge, Opera */
@@ -65,6 +72,8 @@ input[type=number] {
   width: 22vw;
   padding: 10px;
   text-align: center;
+  float: left;
+  margin: 0 0 0 10px;
 }
 #itemCount img {
   max-width: 100%;
@@ -102,4 +111,32 @@ input[type=number] {
 }
 #productList .product p, #productList .product h3 {
   text-align: center;
+}
+
+/* detalle de producto */
+
+.producto img {
+  width: 30vw;
+  float: left;
+}
+.producto .opciones-compra {
+  width: 60vw;
+  float: left;
+  margin: 0 0 0 10px;
+  padding: 0 0 0 20px;
+}
+.producto .opciones-compra h3 {
+  padding: 0 ;
+}
+.item-categories {
+  margin: 20px 0 20px 0;
+  text-align: center;
+}
+.item-categories a {
+  background-color: rgb(97, 124, 180);
+  margin: 0 0 0 10px;
+  text-align: center;
+  padding: 5px 10px 5px 10px;
+  border-radius: 10px;
+  color: #ffffff;
 }
