--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -70,10 +70,9 @@ input[type=number] {
 
 #itemCount {
   width: 22vw;
-  padding: 10px;
   text-align: center;
   float: left;
-  margin: 0 0 0 10px;
+  margin: 10px 10px 10px 0;
 }
 #itemCount img {
   max-width: 100%;
@@ -139,4 +138,11 @@ input[type=number] {
   padding: 5px 10px 5px 10px;
   border-radius: 10px;
   color: #ffffff;
+}
+
+.itemSumbit {
+  clear: both;
+  display: block;
+  width: 22vw;
+  text-align: center;
 }
