--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -220,11 +220,10 @@ input[type=number] {
   text-align: center;
 }
 .item-categories a {
-  background-color: rgb(97, 124, 180);
+  background-color: rgb(85, 85, 85);
   margin: 0 0 0 10px;
   text-align: center;
   padding: 5px 10px 5px 10px;
-  border-radius: 10px;
   color: #ffffff;
 }
 
@@ -257,3 +256,37 @@ input[type=number] {
   text-align: center;
 }
 
+/* CartItem */
+
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #e6e6e6;
+}
+.cart-item h3 {
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  width: 12vw;
+  font-weight: lighter;
+}
+.cart-item img {
+  width: 4vw;
+}
+
+.cart-item .input-number {
+  width:35px;
+  height: 35px;
+  text-align: center;
+}
+.cart-item button {
+  width:35px;
+  height: 43px;
+}
+.cart-container {
+  border-top: 1px solid #e6e6e6;
+}
+.cart-container .cart-total {
+  float: right;
+}
