--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -170,7 +170,7 @@ input[type=number] {
 }
 #productList .product p, #productList .product h3 {
   text-align: center;
-  font-weight: lighter;
+
   text-transform: uppercase;
   font-size: 0.9em;
 }
@@ -179,8 +179,8 @@ input[type=number] {
   color: #959595;
 }
 #productList .product:hover > .ring-overlay{
-  opacity: 0.7;
-  transition: all .2s ease-in-out;
+  opacity: 0.9;
+  transition: all .4s ease-in-out;
 }
 .ring-overlay{
   background-color: #ffffff;
@@ -192,6 +192,13 @@ input[type=number] {
   width: 100%;
   height: 100%;
 }
+.ring-overlay .link{
+ width: 4em;
+ margin: 0px auto;
+}
+.ring-overlay .description{
+  min-height: 5vw;
+ }
 
 
 
@@ -263,6 +270,7 @@ input[type=number] {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #e6e6e6;
+  padding:30px 0 30px 0;
 }
 .cart-item h3 {
   font-family: 'Lato', sans-serif;
@@ -282,10 +290,11 @@ input[type=number] {
 }
 .cart-item button {
   width:35px;
-  height: 43px;
+  height: 41px;
 }
 .cart-container {
   border-top: 1px solid #e6e6e6;
+  margin-top: 30px;
 }
 .cart-container .cart-total {
   float: right;
