--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -79,13 +79,14 @@ h1 span {
   color:#ffffff;
   left: 10px;
   top: 20px;
-  background-color: red;
+  background-color: rgb(235, 98, 98);
   border-radius: 10px;
   width: 20px;
   height: 20px;
   line-height: 15px;
   text-align: center;
   font-weight: bold;
+  font-family: 'Lato';
 }
 #cart-widget span.empty {
   display: none;
@@ -96,7 +97,7 @@ h1 span {
 .breadcrumbs a {
   color:rgb(97, 124, 180);
   margin: 10px 0 10px 0;
-  display: block; 
+  display: block;
 
 }
 /* Slider */
