--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -361,3 +361,11 @@ input[type=number] {
   text-decoration: none;
 }
 
+/* Chckout */
+
+
+.checkout label {
+  width: 200px;
+  display: block;
+}
+
