--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -297,7 +297,7 @@ input[type=number] {
   border-top: 1px solid #e6e6e6;
   margin-top: 30px;
 }
-.cart-container .cart-total {
+ .cart-total {
   float: right;
   height: 150px;
 }
