--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -14,13 +14,19 @@ body {
   margin: 0px auto;
 }
 /* General styles */
-h1 {
+h1{
   text-transform: uppercase;
   font-weight:lighter;
   font-size: 1.9em;
-  line-height: 2.2em;
+  line-height: 2.5em;
   margin: 0;
   padding: 0;
+}
+h1 a{
+  text-decoration: none;
+  color: #000000;
+  padding: 0;
+  margin: 0;
 }
 h1 span {
   font-weight: bold;
@@ -72,6 +78,7 @@ h1 span {
   justify-content: space-between;
   align-items: center;
   position: relative;
+  margin-right: 10px;
 }
 #cart-widget span.full {
   display: block;
@@ -372,5 +379,19 @@ input[type=number] {
 .button {
   padding: 5px;
   margin-top: 15px;
+}
+
+/* order */
+
+.order {
+  border: 1px solid rgb(131, 153, 194);
+  padding: 20px;
+  max-width: 600px;
+  margin: 0px auto 50px;
+  box-shadow: 3px 3px rgb(151, 190, 190);
+}
+.order h3 {
+ padding: 0;
+ text-decoration: underline;
 }
 
