--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -27,7 +27,13 @@ h1 a{
   color: #000000;
   padding: 0;
   margin: 0;
+  display: block;
 }
+
+h1 a img {
+  width: 100%;
+}
+
 h1 span {
   font-weight: bold;
   align-items: center;
@@ -38,12 +44,23 @@ h1 span {
 }
 /* Nav Bar  */
 .NavBar {
-  display: flex;
+  display: block;
   justify-content: space-between;
   height: 78px;
   border-top: 1px solid #e5e5e5;
   border-bottom: 1px solid #e5e5e5;
   margin: 30px 0 30px 0;
+
+  border: 0;
+  border-right: 1px solid #e5e5e5;
+  position: fixed;
+  height: 100%;
+  margin: 0;
+  top: 0;
+  background: #000000;
+  padding: 1vw;
+  z-index: 3;
+  max-width: 4vw;
 }
 .NavBar ul {
   font-family: 'Lato', sans-serif;
@@ -56,6 +73,7 @@ h1 span {
   justify-content: space-between;
   align-items: center;
   text-transform: uppercase;
+  display: none;
 }
 .NavBar li {
  
@@ -67,12 +85,33 @@ h1 span {
   padding: 14px 16px;
   text-decoration: none;
 }
+
 .NavBar li a:hover {
   border-bottom: 5px solid black;
 }
 .NavBar li a.active {
   border-bottom: 5px solid black;
 }
+
+
+/* Top Bar  */
+.TopBar {
+  display: flex;
+  justify-content: space-between;
+  height: 78px;
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+  margin: 30px 0 30px 0;
+
+  margin: 0;
+  border: 0;
+  margin-left: 6vw;
+  position: relative;
+  z-index: 2;
+  background: #000000;
+}
+
+
 #cart-widget {
   display: flex;
   justify-content: space-between;
@@ -99,7 +138,9 @@ h1 span {
   display: none;
 }
 
-
+#cart-widget a{
+  background: #fff;
+}
 
 .breadcrumbs a {
   margin: 10px 0 10px 0;
@@ -117,6 +158,34 @@ h1 span {
 .home-slider img {
   width: 100%;
 }
+
+
+
+
+/* Home Banner*/
+
+.home_banner {
+  background: #000000;
+  height: 100vh;
+}
+
+.home_banner .logo {
+  text-align: center;
+  padding: 10vh 0;
+}
+
+.home_banner .logo img {
+  max-width: 30%;
+}
+
+
+/* list container */
+
+.listContainer {
+  margin-left: 6vw;
+}
+
+
 
 
 /* Item Count */
@@ -358,7 +427,7 @@ input[type=number] {
 
 /* Footer */
 #footer {
-  margin: 50px 0 0 0;
+  margin: 50px 0 0 6vw;
 }
 
 #footer .services {
