--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -58,7 +58,7 @@ h1 span {
   margin: 0;
   top: 0;
   background: #000000;
-  padding: 1vw;
+  padding: 0 1vw;
   z-index: 3;
   max-width: 4vw;
 }
@@ -75,9 +75,7 @@ h1 span {
   text-transform: uppercase;
   display: none;
 }
-.NavBar li {
- 
-}
+
 .NavBar li a {
   display: block;
   color: black;
@@ -94,6 +92,32 @@ h1 span {
 }
 
 
+.NavBar .navicon {
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%,-50%);
+ cursor: pointer;
+ width: 50%;
+}
+
+.NavBar .navicon img{
+  width: 100%;
+ }
+
+.NavBar .nav_button {
+  position: absolute;
+  bottom: 2%;
+  left: 50%;
+  transform: translate(-50%,0);
+  width: 25%;
+ }
+
+ .NavBar .nav_button img{
+  width: 100%;
+ }
+
+
 /* Top Bar  */
 .TopBar {
   display: flex;
@@ -106,9 +130,9 @@ h1 span {
   margin: 0;
   border: 0;
   margin-left: 6vw;
-  position: relative;
+  position: fixed;
   z-index: 2;
-  background: #000000;
+  width: 100%;
 }
 
 
@@ -150,6 +174,15 @@ h1 span {
   text-transform: uppercase;
 
 }
+
+
+.Fullpage {
+  
+}
+
+
+
+
 /* Slider */
 
 .home-slider {
@@ -167,15 +200,21 @@ h1 span {
 .home_banner {
   background: #000000;
   height: 100vh;
+  margin-left: 6vw;
 }
 
 .home_banner .logo {
   text-align: center;
-  padding: 10vh 0;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 30%;
 }
 
 .home_banner .logo img {
-  max-width: 30%;
+  width: 100%;
 }
 
 
