--- a/mate/src/App.css
+++ b/mate/src/App.css
@@ -472,7 +472,17 @@ input[type=number] {
   padding: 0;
   margin: 0 0 .4vw;
   list-style: none;
+  position: relative;
+}
+
+.producto .gallery ul.thumbs li span {
   cursor: pointer;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 
@@ -512,14 +522,51 @@ input[type=number] {
   border-bottom: 1px solid #deff00;
   padding: 0 0 1vh;
 }
-.producto .opciones-compra .button {
-  background-color: #000000;
-  color: #ffffff;
-  font-size: 1em;
-  font-family: 'Playfair Display', serif;
-  text-transform: uppercase;
-  padding: 10px;
+
+
+
+
+.producto .opciones-compra .product_actions {
+  display: flex;
+  margin-top: 2vw;
+}
+
+.producto .opciones-compra .product_actions .item-count {
+  width: 30%;
+  padding-right: 2vw;
+}
+
+.producto .opciones-compra .product_actions .item-count .item {
+  display: flex;
+  height: 100%;
+  background: #fff;
+}
+
+.producto .opciones-compra .product_actions .item-count .item button {
   border: none;
+  background: #fff;
+  color: #101010;
+  width: 33%;
+  font-size: 1.2vw;
+}
+
+.producto .opciones-compra .product_actions .item-count .item input {
+  width: 66%;
+  border: 0;
+  outline: none !important;
+  text-align: center;
+  font-size: 1.2vw;
+}
+
+.producto .opciones-compra .button {
+  background-color: #101010;
+  color: #ffffff;
+  font-size: .75vw;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  padding: 1vw 2vw;
+  border: none;
+  margin: 0;
 }
 .button:hover{
   cursor: pointer;
@@ -527,6 +574,13 @@ input[type=number] {
 .producto .opciones-compra .nostock {
   font-weight: bold;
 }
+
+
+
+
+
+
+
 .item-categories {
   margin: 20px 0 20px 0;
   text-align: center;
@@ -584,40 +638,125 @@ input[type=number] {
 
 /* CartItem */
 
+
+
+.cart-container {
+  
+  margin-top: 30px;
+  width: 87vw;
+  margin-left: 9vw;
+  margin-top: 10vh;
+  margin-bottom: 20vh;
+  display: flex;
+}
+
+.cart-container .cart {
+  width: 75%;
+}
+
+.cart-container .cart_header {
+  border-bottom: 1px solid #e6e6e6;
+  font-family: 'Montserrat', sans-serif;
+  display: flex;
+}
+
+
+
+.cart-container .cart_header span {
+  width: 10%;
+  text-align: center;
+  padding: 1vw 0;
+}
+
+.cart-container .cart_header .hTitle {
+  width: 70%;
+  text-align: left;
+}
+
+
+
+
+
+
+
 .cart-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #e6e6e6;
-  padding:30px 0 30px 0;
-}
-.cart-item h3 {
-  font-family: 'Lato', sans-serif;
-  text-transform: uppercase;
-  font-size: 0.8em;
-  width: 12vw;
-  font-weight: lighter;
-}
-.cart-item img {
-  width: 4vw;
+  padding:1vw 0 ;
 }
 
-.cart-item .input-number {
-  width:35px;
-  height: 35px;
+.cart-item * {
+  width: 10%;
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
 }
-.cart-item button {
-  width:35px;
-  height: 41px;
+
+.cart-item a.close {
+  width: 5%;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 700;
 }
-.cart-container {
-  border-top: 1px solid #e6e6e6;
-  margin-top: 30px;
+
+.cart-item .img {
+  width: 15%;
+  text-align: center;
 }
- .cart-total {
-  float: right;
+
+.cart-item .img img {
+  width: 60%;
+}
+
+.cart-item h3 {
+  text-transform: uppercase;
+  font-size: 0.8em;
+  width: 50%;
+  font-weight: lighter;
+}
+
+
+
+.cart-item .item-count {
+  width: 10%;
+}
+
+.cart-item .item-count .item {
+  display: flex;
+  width: 80%;
+  height: 100%;
+  background: #fff;
+  margin: 0 auto;
+}
+
+.cart-item .item-count .item button {
+  border: none;
+  background: #fff;
+  color: #101010;
+  width: 33%;
+  font-size: 1.2vw;
+}
+
+.cart-item .item-count .item input {
+  width: 66%;
+  border: 0;
+  outline: none !important;
+  text-align: center;
+  font-size: 1.2vw;
+}
+
+
+
+
+
+
+
+
+
+.cart-total {
   height: 150px;
+  width: 25%;
 }
 .cart-total a {
   display: block;
